deploy/eks/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deephaven
  labels:
    app.kubernetes.io/part-of: deephaven-oidc
